# telepathy-mission-control

./: .gitignore  AUTHORS  Android.mk  ChangeLog  ChangeLog.old  Makefile.am  NEWS  README  autogen.sh  configure.ac  libmcclient.pc.in  libmissioncontrol.pc.in  mission-control-plugins-6-uninstalled.pc.in  mission-control-plugins-6.pc.in  mission-control-plugins-uninstalled.pc.in  mission-control-plugins.pc.in  mission-control.pc.in
data/: Makefile.am  im.telepathy.MissionControl.FromEmpathy.gschema.xml  im.telepathy.v1.MissionControl.FromEmpathy.gschema.xml
doc/: Makefile.am  mc-dbus-iface.html
examples/: Makefile.am  mc-example-2.c  mc-example-3.c  mc-example.c
extensions/: Account.xml  Account_Manager.xml  Makefile.am  all-account-manager.xml  all-account.xml  all-nmc4.xml  all.xml  extensions-cli.c  extensions.h
libmcclient/: Makefile.am  account-manager.xml  account.xml  client.xml  dbus-api.c  dbus-api.h  dispatch-operation.xml  libmcclient.xml  mc-account-avatar.c  mc-account-compat.c  mc-account-conditions.c  mc-account-manager.c  mc-account-manager.h  mc-account-priv.h  mc-account-request.c  mc-account-stats.c  mc-account.c  mc-account.h  mc-dispatch-operation.c  mc-dispatch-operation.h  mc-enums.h  mc-errors.c  mc-errors.h  mc-gtypes.h  mc-interfaces.h  mc-profile.c  mc-profile.h  mc-quark.list  mc-signals-marshal.list  mc-svc-client.h
libmissioncontrol/: Makefile.am  cli-nmc4.c  cli-nmc4.h  dbus-api.c  dbus-api.h  mc-account-cli.c  mc-account-manager-proxy.c  mc-account-manager-proxy.h  mc-account-monitor-priv.h  mc-account-monitor.c  mc-account-monitor.h  mc-account-priv.h  mc-account-proxy.c  mc-account-proxy.h  mc-account.c  mc-account.h  mc-manager-priv.h  mc-manager.c  mc-manager.h  mc-profile.c  mc-profile.h  mc-protocol-priv.h  mc-protocol.c  mc-protocol.h  mc-remap.h  mc.c  mc.h  mission-control-signals-marshal.list  mission-control.c  mission-control.h  svc-nmc4.h  test.c
mission-control-plugins/: Makefile.am  account-storage.c  account-storage.h  account.c  account.h  builtin-aegis-acl.c  builtin-aegis-channel-acl.c  builtin-aegis-channel-acl.h  dbus-acl.c  dbus-acl.h  dbus-channel-acl.c  dbus-channel-acl.h  debug-internal.h  debug.c  debug.h  dispatch-operation-policy.c  dispatch-operation-policy.h  dispatch-operation.c  dispatch-operation.h  dummy.c  implementation.h  loader.c  loader.h  mcp-signals-marshal.list  mission-control-plugins.h  request-policy.c  request-policy.h  request.c  request.h
plugins/: Makefile.am  mcp-dbus-aegis-acl.c  mcp-dbus-aegis-acl.h
server/: Makefile.am  im.telepathy.v1.AccountManager.service.in  im.telepathy.v1.MissionControl6.service.in  im.telepathy1.AccountManager.service.in  im.telepathy1.MissionControl6.service.in  mc-server.c  mission-control-5.8.in  mission-control-6.8.in  org.freedesktop.Telepathy.AccountManager.service.in  org.freedesktop.Telepathy.MissionControl.service.in  org.freedesktop.Telepathy.MissionControl5.service.in
src/: Makefile.am  channel-utils.c  channel-utils.h  client-registry.c  client-registry.h  client.xml  connectivity-monitor.c  connectivity-monitor.h  dispatcher.xml  gtypes.c  kludge-transport.c  kludge-transport.h  mcd-account-addressing.c  mcd-account-addressing.h  mcd-account-compat.c  mcd-account-compat.h  mcd-account-conditions.c  mcd-account-conditions.h  mcd-account-config.h  mcd-account-connection.c  mcd-account-connection.h  mcd-account-manager-creation.c  mcd-account-manager-creation.h  mcd-account-manager-default.c  mcd-account-manager-default.h  mcd-account-manager-keyring.c  mcd-account-manager-keyring.h  mcd-account-manager-priv.h  mcd-account-manager-query.c  mcd-account-manager-query.h  mcd-account-manager-reloadable.c  mcd-account-manager-sso.c  mcd-account-manager-sso.h  mcd-account-manager.c  mcd-account-manager.h  mcd-account-presence.c  mcd-account-presence.h  mcd-account-priv.h  mcd-account-requests.c  mcd-account-requests.h  (+82 more)
test/: Makefile.am  account-store-default.c  account-store-default.h  account-store-libaccounts.c  account-store-libaccounts.h  account-store.c  keyring-command.c  mc-client.c  value-is-same.c
tests/: Makefile.am  README  account-store-default.c  account-store-default.h  account-store-keyfile.c  account-store-keyfile.h  account-store-libaccounts.c  account-store-libaccounts.h  account-store-variant-file.c  account-store-variant-file.h  account-store.c  keyfile.c  keyring-command.c  tease-the-minotaur.c  value-is-same.c
tools/: Makefile.am  doc-generator.xsl  glib-blocking-client-gen.py  glib-client-gen.py  glib-ginterface-gen.py  gquark-gen.py  header-checks.am  lcov.am  libglibcodegen.py  run_and_bt.gdb  spec-to-introspect.xsl  telepathy.am
util/: Makefile.am  mc-account-convert.1  mc-account-convert.c  mc-reload  mc-tool.1  mc-tool.c  mc-wait-for-name.1.in  mc6-tool.1  mc6-wait-for-name.1.in  wait-for-name.c
xml/: Account.xml  Account_Interface_Addressing.xml  Account_Interface_Avatar.xml  Account_Interface_ChannelRequests.xml  Account_Interface_Compat.xml  Account_Interface_Conditions.xml  Account_Interface_External_Password_Storage.xml  Account_Interface_Hidden.xml  Account_Interface_Minimum_Presence.xml  Account_Interface_Sso.xml  Account_Interface_Stats.xml  Account_Manager.xml  Account_Manager_Interface_Creation.xml  Account_Manager_Interface_Hidden.xml  Account_Manager_Interface_Query.xml  Account_Manager_Interface_Reloadable.xml  Account_Manager_Interface_SSO.xml  Account_Manager_Interface_Sso.xml  Channel_Dispatch_Operation.xml  Channel_Dispatcher_Future.xml  Channel_Dispatcher_Interface_Hints.xml  Channel_Dispatcher_Interface_Messages_DRAFT.xml  Channel_Dispatcher_Interface_Redispatch.xml  Channel_Request.xml  Channel_Request_Future.xml  Channel_Request_Interface_Hints.xml  Client_Approver.xml  Client_Handler.xml  Client_Handler_Interface_Request_Notification.xml  Client_Observer.xml  Connection_Interface_Contact_Capabilities_Draft1.xml  Connection_Interface_Contact_Capabilities_Draft2.xml  Connection_Manager_Interface_Account_Storage.xml  Makefile.am  MissionControl.xml  all.xml  generic-types.xml  mcd-dbus-services.xml  (+3 more)
(+308 files in other folders)
